<resources>
    <string name="DummyContentDescription">dummy</string>
    <string name="help_preference">Help</string>
    <string name="ias_help_contact_header">Contact us</string>
    <string name="ias_help_contact_body">Send us your feedback</string>
    <string name="ias_progress_dialog_title">Connecting...</string>
    <string name="ias_alert_dialog_title">Communication Error</string>
    <string name="ias_alert_dialog_message">"Unable to connect to server. Please make sure you're connected to the Internet."</string>
    <string name="title_help_preference">Online Help</string>
    <string name="summary_intent_preference">Get help at www.avgmobilation.com</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_summary">Review our Terms of Service</string>
    <string name="avg_title">AVG Technologies</string>
    <string name="avg_summary">Get award-winning security software for your PC</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="main_menu_share">Share</string>
    <string name="main_menu_share_subject">Check out AVG AntiVirus FREE for Android!</string>
    <string name="main_menu_share_body">AVG AntiVirus FREE is an app that protects your device in real time with just one tap. Go to &lt;a href=[url]>Install AVG Anti-Virus Free&lt;/a> or search AVG on Google Play. &lt;br>&lt;br>&lt;a href=http://www.avg.com/>www.AVG.com&lt;/a></string>
    <string name="main_menu_share_subject_tablet">Check out AVG AntiVirus FREE for Android tablet!</string>
    <string name="main_menu_share_body_tablet">AVG AntiVirus FREE for tablet is an app that protects your device in real time with just one tap. Go to &lt;a href=[url]>Install AVG Anti-Virus Free for tablet&lt;/a> or search AVG on Google Play. &lt;br>&lt;br>&lt;a href=http://www.avg.com/>www.AVG.com&lt;/a></string>
    <string name="main_menu_about">About</string>
    <string name="msg_camera_framework_bug">"Sorry, there's a problem with your Android camera. You may need to restart your device."</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder to scan it</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="result_text">Found plain text</string>
    <string name="license_invalid_title">"Sorry, you've entered an invalid license"</string>
    <string name="license_invalid_body">Please enter a valid license</string>
    <string name="current_license">Current license:</string>
    <string name="license_activation_block_title">License</string>
    <string name="license_activation_licensed_pro_toast">Congratulations, Your license has been activated</string>
    <string name="license_activation_scan_qr">"Please tap 'Scan QR code' to enter license key"</string>
    <string name="license_activation_enter_manually">"Enter your license key manually and then tap 'OK':"</string>
    <string name="enter_unlock_password">Please enter unlock password</string>
    <string name="license_scan_qr">Scan QR code</string>
    <string name="enter_serial_again">Retype password:</string>
    <string name="or">or</string>
    <string name="license_in_use">Sorry, that license key is already in use. Please enter another.</string>
    <string name="license_activation_pro_title">License Activation</string>
    <string name="please_wait">Please wait</string>
    <string name="testing">Testing</string>
    <string name="text_view">TextView</string>
    <string name="app_locker_expired_button_no">No Thanks</string>
    <string name="main_menu_subscribe">Subscribe</string>
    <string name="privacy_upgrade">Upgrade</string>
    <string name="widget_close_all_item">Kill All Apps</string>
    <string name="widget_flashlight_item">Flashlight</string>
    <string name="widget_last_update_item">Last Update</string>
    <string name="widget_close_all_issue">Free RAM:</string>
    <string name="widget_close_nothing_to_close">Your device is optimized</string>
    <string name="widget_activation">Tap to activate</string>
    <string name="widget_loading">Widget is reloading. Please wait</string>
    <string name="widgetSettings">Widget Settings</string>
    <string name="widgetUserInstruction">Customize the widget by tapping the buttons below</string>
    <string name="widgetSettingsDone">Done</string>
    <string name="widgetSettingsSave">Save</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="value">Value</string>
    <string name="settings">Settings</string>
    <string name="media">Media</string>
    <string name="scanning">Scanning…</string>
    <string name="title_task_killer_preference">Task Killer</string>
    <string name="title_task_killer_Tasks">Tasks</string>
    <string name="title_task_killer_Processes">Processes</string>
    <string name="summary_task_killer_preference">Close unused apps</string>
    <string name="task_killer_close_all">Kill All</string>
    <string name="task_killer_are_you_sure_close_all">Are you sure you want to close all runnings apps?</string>
    <string name="task_killer_running">Running</string>
    <string name="task_killer_min">min</string>
    <string name="task_killer_hour">hour</string>
    <string name="task_killer_day">day</string>
    <string name="task_killer_no_running_tasks">No running tasks</string>
    <string name="battery_state">Battery</string>
    <string name="battery_talk_time_3_4_g">Talk time (3/4G)</string>
    <string name="battery_talk_time_2_g">Talk time (2G)</string>
    <string name="battery_audio_time">Audio playback time</string>
    <string name="battery_video_time">Video playback time</string>
    <string name="battery_web_time">Browsing time</string>
    <string name="battery_idle_time">Idle time</string>
    <string name="battery_health">Health:</string>
    <string name="battery_dead">Dead</string>
    <string name="battery_good">Good</string>
    <string name="battery_overheat">Overheated</string>
    <string name="battery_overvoltage">Overvoltage</string>
    <string name="battery_status">Status:</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_discharging">Discharging</string>
    <string name="battery_full">Full</string>
    <string name="battery_not_charging">Not charging</string>
    <string name="battery_temperature">Temperature:</string>
    <string name="battery_show_usage">View battery usage</string>
    <string name="unknown">Unknown</string>
    <string name="memory_loading">Loading…</string>
    <string name="battery_save_settings">Power Saving Options</string>
    <string name="battery_save_wifi">Wi-Fi</string>
    <string name="battery_save_bluetooth">Bluetooth</string>
    <string name="battery_save_location">GPS</string>
    <string name="battery_save_wifi_hotspot">Wi-Fi hotspot</string>
    <string name="battery_save_mobile_sata">Mobile data</string>
    <string name="battery_save_autosync">Auto-sync data</string>
    <string name="battery_save_airplane">Airplane mode</string>
    <string name="battery_save_screen_timeout">Screen timeout</string>
    <string name="battery_save_screen_brightnes">Brightness</string>
    <string name="battery_save_auto_brightnes">Automatic brightness</string>
    <string name="battery_save_volume">Volume control</string>
    <string name="battery_save_auto_rotation">Auto rotation</string>
    <string name="battery_usage">Battery Usage</string>
    <string name="turning_on">Turning on…</string>
    <string name="turning_of">Turning off…</string>
    <string name="turned_on">Turned on</string>
    <string name="turned_of">Turned off</string>
    <string name="traffic_no_values">"No traffic data available.
Either there are currently no applications using the network, or your device isn't connected to a network."</string>
    <string name="power_saving_mode_settings">Settings</string>
    <string name="battery_save_notify_on">Warn when battery reaches</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="battery_save_ringer">Ringer</string>
    <string name="alarm">Alarm</string>
    <string name="system">System</string>
    <string name="ringtone">Ringtone</string>
    <string name="notification">Notification</string>
    <string name="use_ringtone_vol_for_notification">Use ringtone volume for notifications</string>
    <string name="battery_notification_title">Low battery level -</string>
    <string name="battery_notification_body">Tap to save power</string>
    <string name="traffic_quota">Data package size</string>
    <string name="traffic_billing_date">Cycle start date</string>
    <string name="traffic_notify">Warn me when data usage reaches:</string>
    <string name="traffic_usage_reaches">Warn when usage reaches</string>
    <string name="traffic_quota_illegal">- Data plan quota should be between 1 MB and 500 GB</string>
    <string name="traffic_illegal_billing_date">- Billing date should be between [date1] and [date2] (inclusive).</string>
    <string name="traffic_illegal_notification_threshold">- Notification threshold should be between 1 and 100</string>
    <string name="traffic_illegal_values">"Oops! You've entered an invalid value."</string>
    <string name="traffic_data_since_reboot">Mobile and Wi-Fi traffic since last reboot</string>
    <string name="traffic_data_counter_turn_off_confirmation">Are you sure you want to turn the data counter off?</string>
    <string name="traffic">Data Usage</string>
    <string name="not_supported">Not Supported</string>
    <string name="authenticating">Authenticating…</string>
    <string name="connected_to">Connected to</string>
    <string name="failed">Sorry, connection attempt failed</string>
    <string name="idle">Idle</string>
    <string name="obtaining_ip">Obtaining IP…</string>
    <string name="suspended">Suspended</string>
    <string name="storage">Storage</string>
    <string name="sd">(sd)</string>
    <string name="internal">System</string>
    <string name="sd_card">USB/SD</string>
    <string name="free">Free:</string>
    <string name="by_name">Sort by name</string>
    <string name="by_location">Sort by location</string>
    <string name="by_size">Sort by size</string>
    <string name="activation_use_recommended_settings">Use recommended settings</string>
    <string name="activation_agreeing">By tapping \"Activate\" you are agreeing to our</string>
    <string name="activation_bullet_50">Alert me when my battery reaches 30% charge</string>
    <string name="activation_bullet_surfing">Protect me when web surfing</string>
    <string name="activation_bullet_sms">Scan my text messages (SMS) in real time</string>
    <string name="activation_change">You can change these settings later</string>
    <string name="activation_terms">Terms of Service</string>
    <string name="activation_activate">Activate</string>
    <string name="app_locker_enter_empty">Password:</string>
    <string name="block_app_locker_recover_password_hyper_link">Recover password</string>
    <string name="callFilterAutoReplay">Auto reply message:</string>
    <string name="callFilterSetDefaultMessage">Set default message.</string>
    <string name="callFilterSetAsDefaultMessage">Set as default message</string>
    <string name="callMessageFilterCallsTabName">Calls</string>
    <string name="callMessageFilterMessageTabName">Messages</string>
    <string name="privacy_pro_features">PRO features:</string>
</resources>