<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/top_stripe" android:background="@drawable/action_bar_stripe" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <ScrollView android:id="@id/scroll_scan_result" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/ll_buttom" android:layout_below="@id/top_stripe" android:fadeScrollbars="false">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <ImageView android:layout_gravity="center" android:id="@id/antivirus_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/avg_logo" />
            <CheckBox android:id="@id/use_settings_cb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/activation_use_recommended_settings" android:layout_weight="1.0" />
            <TextView android:id="@id/warn_50_tv" android:paddingLeft="50.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activation_bullet_50" android:drawableLeft="@drawable/bullet" android:drawablePadding="10.0dip" android:layout_weight="1.0" style="@style/TextGreyMedium" />
            <TextView android:id="@id/web_surf_tv" android:paddingLeft="50.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activation_bullet_surfing" android:drawableLeft="@drawable/bullet" android:drawablePadding="10.0dip" android:layout_weight="1.0" style="@style/TextGreyMedium" />
            <TextView android:id="@id/sms_tv" android:paddingLeft="50.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activation_bullet_sms" android:drawableLeft="@drawable/bullet" android:drawablePadding="10.0dip" android:layout_weight="1.0" style="@style/TextGreyMedium" />
            <TextView android:id="@id/text_change" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:text="@string/activation_change" android:layout_weight="1.0" style="@style/TextGreyMedium" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/ll_buttom" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_alignParentBottom="true">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/text_agreeing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activation_agreeing" style="@style/TextGreyMedium" />
        <TextView android:linksClickable="true" android:layout_gravity="center_horizontal" android:id="@id/text_terms_and_privacy_hyperlink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:text="@string/activation_terms" style="@style/TextGreyMedium" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/activate_button" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/activation_activate" />
    </LinearLayout>
</RelativeLayout>