<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/ll_footer" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0sp" android:text="@string/privacy_pro_features" style="@style/TrialBigBlueText" />
        <TextView android:id="@id/tv_trial_state" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/testing" style="@style/TrialDaysLeftOrangeText" />
    </LinearLayout>
    <TextView android:id="@id/tv_upgrade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/privacy_upgrade" style="@style/UpgradeLink" />
</LinearLayout>