<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/app_block_root_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="6.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/action_bar" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="6.0">
        <ScrollView android:id="@id/scroll_scan_result" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="6.0">
            <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/app_info" android:background="@color/transperent_grey" android:padding="20.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                    <ImageView android:id="@id/app_icon" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/avg_logo" />
                    <TextView android:id="@id/app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/testing" style="@style/TextWhiteLarge" />
                </LinearLayout>
                <TextView android:layout_gravity="left" android:id="@id/tv_current_license" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="45.0dip" android:layout_marginRight="20.0dip" android:text="@string/current_license" style="@style/TextGreyMedium" />
                <TextView android:layout_gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/app_locker_enter_empty" style="@style/TextGreyMedium" />
                <EditText android:id="@id/edit_code" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:inputType="textPassword" />
                <Button android:id="@id/ok_button" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/ok" />
                <TextView android:layout_gravity="left" android:id="@id/block_app_locker_recover_password_hyper_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0sp" android:text="@string/block_app_locker_recover_password_hyper_link" style="@style/TextGreyMedium" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>