<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/scrollView1" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fadeScrollbars="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/messagesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callMessageFilterMessageTabName" />
            <LinearLayout android:id="@id/messageHeaderDivider" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/trustedMessagesItem" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/blockedMessagesItem" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/reportSpam" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/callsLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callMessageFilterCallsTabName" />
            <LinearLayout android:id="@id/callHeaderDivider" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/silentModeItem" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/rejectCallItem" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <include android:id="@id/rejectWithMessageItem" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/call_filter_dialog_item" />
            <LinearLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/autoReplyLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="@color/white" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callFilterAutoReplay" />
                <EditText android:textSize="14.0dip" android:id="@id/defaultMessageHolder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/callFilterSetDefaultMessage" android:maxLength="70" android:inputType="textCapSentences|textMultiLine" />
                <CheckBox android:textSize="14.0dip" android:id="@id/defaultMessageCheckbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/callFilterSetAsDefaultMessage" />
                <LinearLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>